[gd_scene load_steps=7 format=2]

[ext_resource path="res://3DEditor/GimbleCam.tscn" type="PackedScene" id=1]
[ext_resource path="res://3DEditor/ObjectProperties/CubeOutlineTool.gd" type="Script" id=2]
[ext_resource path="res://3DEditor/ObjectProperties/OriginPoint.tscn" type="PackedScene" id=3]
[ext_resource path="res://3DEditor/ObjectProperties/OriginView.gd" type="Script" id=4]

[sub_resource type="ArrayMesh" id=3]
surfaces/0 = {
"aabb": AABB( -0.5, -0.5, -0.5, 1, 1, 1 ),
"array_data": PoolByteArray( 0, 0, 0, 191, 0, 0, 0, 191, 0, 0, 0, 191, 0, 0, 0, 63, 0, 0, 0, 191, 0, 0, 0, 191, 0, 0, 0, 191, 0, 0, 0, 191, 0, 0, 0, 63, 0, 0, 0, 63, 0, 0, 0, 191, 0, 0, 0, 63, 0, 0, 0, 191, 0, 0, 0, 191, 0, 0, 0, 191, 0, 0, 0, 191, 0, 0, 0, 191, 0, 0, 0, 63, 0, 0, 0, 63, 0, 0, 0, 191, 0, 0, 0, 191, 0, 0, 0, 63, 0, 0, 0, 191, 0, 0, 0, 63, 0, 0, 0, 191, 0, 0, 0, 63, 0, 0, 0, 191, 0, 0, 0, 63, 0, 0, 0, 63, 0, 0, 0, 191, 0, 0, 0, 191, 0, 0, 0, 63, 0, 0, 0, 63, 0, 0, 0, 63, 0, 0, 0, 63, 0, 0, 0, 63, 0, 0, 0, 191, 0, 0, 0, 63, 0, 0, 0, 191, 0, 0, 0, 191, 0, 0, 0, 63, 0, 0, 0, 63, 0, 0, 0, 63, 0, 0, 0, 63, 0, 0, 0, 191, 0, 0, 0, 63, 0, 0, 0, 63, 0, 0, 0, 63, 0, 0, 0, 191, 0, 0, 0, 191, 0, 0, 0, 191, 0, 0, 0, 191, 0, 0, 0, 63, 0, 0, 0, 191, 0, 0, 0, 63, 0, 0, 0, 191, 0, 0, 0, 191, 0, 0, 0, 63, 0, 0, 0, 63, 0, 0, 0, 191, 0, 0, 0, 191, 0, 0, 0, 191, 0, 0, 0, 63, 0, 0, 0, 191, 0, 0, 0, 63, 0, 0, 0, 63, 0, 0, 0, 63, 0, 0, 0, 191, 0, 0, 0, 63, 0, 0, 0, 63, 0, 0, 0, 63, 0, 0, 0, 63 ),
"array_index_data": PoolByteArray(  ),
"blend_shape_data": [  ],
"format": 2194433,
"index_count": 0,
"primitive": 1,
"skeleton_aabb": [  ],
"vertex_count": 24
}

[sub_resource type="SpatialMaterial" id=2]
flags_unshaded = true
albedo_color = Color( 0.74902, 0.74902, 0.74902, 1 )

[node name="OriginView" type="Spatial"]
script = ExtResource( 4 )

[node name="MeshInstance" type="MeshInstance" parent="."]
mesh = SubResource( 3 )
material/0 = SubResource( 2 )
script = ExtResource( 2 )

[node name="GimbleCam" parent="." instance=ExtResource( 1 )]
MaxZoom = 1
MinZoom = 1

[node name="Center" parent="." instance=ExtResource( 3 )]
label = "Center"

[node name="TopLeftFront" parent="." instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.5, 0.5, 0.5 )
label = "Front Left Top"

[node name="TopRightFront" parent="." instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 0.5, 0.5 )
label = "Front Right Top"

[node name="BottomLeftFront" parent="." instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.5, -0.5, 0.5 )
label = "Front Left Bottom"

[node name="BottomRightFront" parent="." instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, -0.5, 0.5 )
label = "Front Right Bottom"

[node name="TopLeftBack" parent="." instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.5, 0.5, -0.5 )
label = "Back Left Top"

[node name="TopRightBack" parent="." instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 0.5, -0.5 )
label = "Back Right Top"

[node name="BottomLeftBack" parent="." instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.5, -0.5, -0.5 )
label = "Back Left Bottom"

[node name="BottomRightBack" parent="." instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, -0.5, -0.5 )
label = "Back Right Bottom"

[node name="TopCenter" parent="." instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0 )
label = "Top Center"

[node name="BottomCenter" parent="." instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 0 )
label = "Bottom Center"

[node name="LeftCenter" parent="." instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.5, 0, 0 )
label = "Left Center"

[node name="RightCenter" parent="." instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 0, 0 )
label = "Right Center"

[node name="BackCenter" parent="." instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.5 )
label = "Back Center"

[node name="FrontCenter" parent="." instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.5 )
label = "Front Center"
